fixed z-index on about page

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -318,7 +318,6 @@ section.ws {
     width: 100%;
     height: 100%;
     background: #000;
-    color: pink;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -379,7 +378,7 @@ section.ws {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: pink;
     z-index: 19;
   }
 
@@ -428,7 +427,7 @@ nav {
 
 .nav-button {
     text-decoration: none;
-    color: #000 !important;
+    color: #000;
     font-family: "Bebas Neue", sans-serif;
 }
 
